--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,9 +1,18 @@
-.header  {
+.header {
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
   font-family: monospace;
   background: papayawhip;
 }
 
+
 .logo {
+
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
   font-size: 48px;
   font-weight: 900;
   color: tomato;
@@ -14,11 +23,21 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  /*this part was not used
+  justify-content: right;
+  */
+  /* the following was inside the solution*/
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+
 }
 
 a {
   font-size: 22px;
   background: white;
+  margin: 5px;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
