--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,13 +1,24 @@
+.everything {
+  margin-top: 32px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
 body {
   font-family: 'Courier New', Courier, monospace;
+  min-width: 200px;
 }
 
 img {
   width: 100px;
   height: 100px;
+
 }
 
 .title {
+  display: flex;
+  justify-content: center;
   font-size: 36px;
   font-weight: 900;
 }
@@ -23,4 +34,16 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/*Random CSS trials*/
+.text {
+  text-align: center;
+  inline-size: 200px;
+  overflow-wrap: break-word;
+}
+
+.first.second.third.fourth {
+  display: flex;
+  margin: 26px;
 }
