--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -16,10 +17,24 @@ body {
 }
 
 .modal {
+  padding: 20px;
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, .2);
+
+}
+
+.firstline {
+  display: flex;
+  justify-content: center;
+
+}
+
+.secondline {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 60px;
 }
 
 .icon {
@@ -30,9 +45,11 @@ body {
   width: 42px;
   height: 42px;
   border-radius: 50%;
+  margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -57,10 +74,23 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-right: 1%;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+  flex-shrink: 1;
+  margin-right: auto;
+
+}
+
+.text {
+  margin-bottom: 16px;
 }
