style excersise landing page error: pathspec 'origin' did not match any file(s) known to git
[?2004h[?1049h[22;0;0t[1;24r(B[m[4l[?7h[39;49m[?1h=[?1h=[?25l[39;49m(B[m[H[2J[22d(B[0;7mFile ...ITMSG is being edited by burak (with nano 6.2, PID 14879); open anyway? [23;1H Y(B[m Yes
[24d(B[0;7m N(B[m No[24;17H(B[0;7m^C(B[m Cancel[22;80H[?12l[?25h[?25l[?12l[?25h[?25l[?12l[?25h[?25l[?12l[?25h[?25l[?12l[?25h[?25l[?12l[?25h[?25l[?12l[?25h[?25l
[J[24d[?12l[?25h[24;1H[?1049l[23;0;0t
[?1l>[?2004lAborting commit due to empty commit message.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,19 +1,84 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
+.header {
+  display: flex;
+  padding: 20px;
+}
+
+.footer {
+  display: flex;
+  background-color: #eeeeee;
+  padding: 20px;
+}
+
+.header ul {
+  list-style: none;
+  text-decoration: none;
+  display: inline-flex;
+}
+
+.footer ul {
+  list-style: none;
+  text-decoration: none;
+  display: inline-flex;
+}
+
+.right-links {
+  flex-grow: 1;
+  justify-content: flex-end;
+  margin-right: 10px;
+}
+
+.footer .right-links {
+  position: absolute;
+  right: 10px;
+}
+
+
+
 img {
-  width: 600px;
+  max-width: 600px;
+}
+
+a {
+  text-decoration: none;
+  Color: #171717;
+  margin: 10px;
+}
+
+a:hover {
+  background-color: #f7be7a;
+}
+
+button:hover {
+  background: #e0e0e0;
+  box-shadow: 20px 20px 60px #bebebe,
+    -20px -20px 60px #ffffff;
+}
+
+
+.content {
+  min-width: auto;
+  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  margin: auto 0;
+  align-items: center;
 }
 
 button {
   font-family: Roboto, sans-serif;
   border: none;
+  padding: 10px;
   border-radius: 8px;
   background: #eee;
 }
@@ -22,6 +87,6 @@ input {
   border: 1px solid #ddd;
   border-radius: 16px;
   padding: 8px 24px;
-  width: 400px;
+  min-width: 400px;
   margin-bottom: 16px;
 }
